force-app/main/default/objects/PSA_Board__c/PSA_Board__c.object-meta.xml
<CustomObject>
    <description>Jira Boards</description>
    <label>PSA Board</label>
    <nameField>
        <label>PSA Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>