force-app/main/default/objects/PSA_Board__c/fields/PSA_BoardType__c.field-meta.xml
<CustomField>
    <fullName>PSA_BoardType__c</fullName>
    <label>PSA Board Type</label>
    <length>155</length>
    <type>Text</type>
</CustomField>