force-app/main/default/objects/PSA_Board__c/fields/PSA_JiraBoardId__c.field-meta.xml
<CustomField>
    <fullName>PSA_JiraBoardId__c</fullName>
    <description>&quot;id&quot;: 67</description>
    <externalId>true</externalId>
    <label>PSA Jira BoardId</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>