force-app/main/default/objects/PSA_Board__c/fields/PSA_JiraPrivateBoard__c.field-meta.xml
<CustomField>
    <fullName>PSA_JiraPrivateBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSA Jira Private Board</label>
    <type>Checkbox</type>
</CustomField>