force-app/main/default/objects/PSA_Board__c/fields/PSA_OpportunityProjectId__c.field-meta.xml
<CustomField>
    <fullName>PSA_OpportunityProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PSA Opportunity ProjectId</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PSA Boards</relationshipLabel>
    <relationshipName>PSA_Boards</relationshipName>
    <type>Lookup</type>
</CustomField>